[package]
name = "mngr"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.12"
uuid = { version = "1.8.0" , features = ["v4"]}
chrono = "0.4.38"
colored = "2.1.0"
versions = "6.2.0"
serde = { version = "1.0.201", features = ["derive"] }
reqwest = { version =  "0.12.4", features = ["blocking"] }
http = "1.1.0"
serde_json = "1.0"
fancy-regex = "0.13.0"